...
              TextField(
                controller: title,
                focusNode: titleFocus,
                textCapitalization: TextCapitalization.sentences,
                style: Theme.of(context).textTheme.headlineSmall,
                decoration: const InputDecoration(
                  hintText: 'Add title',
                  border: UnderlineInputBorder(),
                ),
                textInputAction: TextInputAction.done,
              ),
              if (quick != null)
                Align(
...
